--- a/virality_predictor/index.html
+++ b/virality_predictor/index.html
@@ -215,8 +215,43 @@
 
         .button-group .btn { flex: 1; }
 
+        .tips-grid {
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            gap: 16px;
+            margin-top: 12px;
+        }
+
+        .tip-box {
+            padding: 16px;
+            background: rgba(33, 128, 141, 0.05);
+            border-radius: 8px;
+            border-left: 4px solid var(--color-primary);
+        }
+
+        .tip-box h3 {
+            margin-top: 0;
+            margin-bottom: 8px;
+            font-size: 14px;
+            color: var(--color-primary);
+            font-weight: 600;
+        }
+
+        .tip-box ul {
+            margin: 0;
+            padding-left: 20px;
+            font-size: 12px;
+            line-height: 1.6;
+            color: var(--color-text-secondary);
+        }
+
+        .tip-box li {
+            margin-bottom: 4px;
+        }
+
         @media (max-width: 600px) {
             h1 { font-size: 24px; }
+            .tips-grid { grid-template-columns: 1fr; }
         }
     </style>
 </head>
@@ -290,6 +325,49 @@
             <p style="color: var(--color-text-secondary); font-size: 14px; text-align: center; margin: 0; padding-top: 20px;">
                 Upload a video and enter metadata to get predictions
             </p>
+        </div>
+
+        <!-- Viral Video Tips -->
+        <div class="card">
+            <h2>💡 Tips for Creating Viral Videos</h2>
+            <div class="tips-grid">
+                <div class="tip-box">
+                    <h3>📝 Title & Description</h3>
+                    <ul>
+                        <li>Use compelling, curiosity-driven titles (50-60 characters)</li>
+                        <li>Include relevant keywords naturally</li>
+                        <li>Write descriptive text (150-200+ characters recommended)</li>
+                        <li>Add hashtags and timestamps for better discovery</li>
+                    </ul>
+                </div>
+                <div class="tip-box">
+                    <h3>🎨 Visual Content</h3>
+                    <ul>
+                        <li>Use high contrast colors and bold visuals</li>
+                        <li>Include face expressions in thumbnails</li>
+                        <li>Maintain consistent visual style</li>
+                        <li>Optimize for mobile viewing (most views)</li>
+                    </ul>
+                </div>
+                <div class="tip-box">
+                    <h3>🔊 Audio & Sound</h3>
+                    <ul>
+                        <li>Use trending sounds and music</li>
+                        <li>Maintain clear, balanced audio levels</li>
+                        <li>Add captions for better engagement</li>
+                        <li>Hook viewers in the first 3 seconds</li>
+                    </ul>
+                </div>
+                <div class="tip-box">
+                    <h3>⚡ Content Strategy</h3>
+                    <ul>
+                        <li>Post consistently at optimal times</li>
+                        <li>Engage with comments and community</li>
+                        <li>Use CTAs (calls-to-action) effectively</li>
+                        <li>Analyze what resonates with your audience</li>
+                    </ul>
+                </div>
+            </div>
         </div>
 
         <footer style="text-align: center; color: var(--color-text-secondary); font-size: 12px; margin-top: 40px; padding-top: 20px; border-top: 1px solid var(--color-border);">
