--- a/virality_predictor/index.html
+++ b/virality_predictor/index.html
@@ -371,7 +371,7 @@
         </div>
 
         <footer style="text-align: center; color: var(--color-text-secondary); font-size: 12px; margin-top: 40px; padding-top: 20px; border-top: 1px solid var(--color-border);">
-            <p>Model automatically loads from ./virality_model/model.json</p>
+            <p>By Konstantin Shashkov & Artem Molchanov for NNDL course @ GSB HSE - Moscow, 2025</p>
         </footer>
     </div>
 
